# avr-bare-metal

./: .gitignore  README.md  meson.build  meson_options.txt
profiles/: atmega328p.ini
src/: main.cpp
